<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".Activity.DrugDetailActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/topAppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar"
        app:title="Quản lý loại thuốc"
        app:navigationIcon="@drawable/arrow_left" />
    <ImageView
        android:id="@+id/drugImageView"
        android:layout_width="249dp"
        android:layout_height="141dp"
        android:layout_gravity="center"
        android:contentDescription="@string/drug_image"
        android:src="@drawable/ic_no_image"
        android:minWidth="120dp"
        android:minHeight="60dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="end"
        >
        <Button
            android:id="@+id/chooseImageBtn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:backgroundTint="#2A67E4"
            android:text="@string/choose_image" />
    </LinearLayout>

    
    <EditText
        android:id="@+id/nameInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/black"
        android:hint="@string/drug_name"/>


    <Spinner
        android:id="@+id/categorySpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:textColor="@android:color/black"
        android:prompt="@string/drug_category" />

    <EditText
        android:id="@+id/priceInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:textColorHint="@color/black"
        android:hint="@string/drug_price"/>

    <EditText
        android:id="@+id/quantityInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:textColorHint="@color/black"
        android:hint="@string/drug_quantity"/>
    
    <Button
        android:id="@+id/saveBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:backgroundTint="#4CAF50"
        android:text="@string/save"/>

    <Button
        android:id="@+id/deleteBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:backgroundTint="#F44336"
        android:text="@string/delete"/>

</LinearLayout>