<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        android:gravity="end"
        >

        <Switch
            android:id="@+id/switchLangAbout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/switch_eng_or_vn"/>

    </LinearLayout>
    <!-- Logo -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="4dp"
        android:gravity="center">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="4dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/thientamlogo"
                android:scaleType="centerCrop" />
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>

    <!-- Thông tin -->
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginVertical="4dp">
        <TextView android:layout_width="80dp" android:layout_height="wrap_content" android:text="@string/Name" />
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Lương Thị Huyền Trang" android:layout_marginStart="5dp"/>
    </LinearLayout>

    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginVertical="4dp">
        <TextView android:layout_width="80dp" android:layout_height="wrap_content" android:text="@string/class_text" />
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="D22_TH02" android:layout_marginStart="5dp"/>
    </LinearLayout>

    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginVertical="4dp">
        <TextView android:layout_width="80dp" android:layout_height="wrap_content" android:text="@string/Student_ID" />
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="DH52201610" android:layout_marginStart="5dp"/>
    </LinearLayout>

    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginVertical="4dp">
        <TextView android:layout_width="80dp" android:layout_height="wrap_content" android:text="@string/Phone" />
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="123456789" android:layout_marginStart="5dp" android:textColor="@color/black"/>
        <ImageButton
            android:id="@+id/btn_call"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:src="@drawable/phone"
            android:layout_marginStart="16dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/Call_Number" />
        <ImageButton
            android:id="@+id/btn_dialer"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:src="@drawable/card_account_phone_outline"
            android:layout_marginStart="16dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/Call_Number" />
    </LinearLayout>

    <!-- ĐỔI THÀNH FrameLayout -->
    <FrameLayout
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="16dp" />

</LinearLayout>