<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp">
    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="16dp"
        app:strokeColor="#4CAF50"
        app:strokeWidth="3dp"
        app:cardElevation="8dp"
        app:cardBackgroundColor="#FFFFFF">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <!-- MÃ DANH MỤC - BẮT BUỘC NHẬP -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_category_code"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_marginBottom="8dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilCategoryCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/catogory_code"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:hintTextColor="@color/purple_700"
                app:errorEnabled="true"
                android:layout_marginBottom="16dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtCategoryCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapCharacters"
                    android:maxLength="10"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <!-- TÊN DANH MỤC - BẮT BUỘC NHẬP -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_category"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_marginBottom="8dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilCategoryName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name_category"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:hintTextColor="@color/purple_700"
                app:errorEnabled="true"
                android:layout_marginBottom="24dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtCategoryName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapSentences" />

            </com.google.android.material.textfield.TextInputLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="4dp">

                <Button
                    android:id="@+id/btnDeleteCategory"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/delete"
                    android:backgroundTint="#F44336" />

                <Button
                    android:id="@+id/btnSaveCategory"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/save"
                    android:backgroundTint="#4CAF50"
                    android:layout_marginStart="8dp" />

        </LinearLayout>


        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>


    <TextView
        android:id="@+id/selectedCategoryTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selected_category_text"
        android:textSize="18sp"
        android:paddingBottom="10dp" />
    <ListView
        android:id="@+id/categoryListView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/btnAddCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_category"
        android:visibility="gone"
        />

</LinearLayout>
